<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            app:showAsAction="always"/>
    </group>

    <group>
        <item
            android:id="@+id/nav_delete_account"
            android:icon="@drawable/ic_delete_account"
            android:title="@string/delete_account"
            app:showAsAction="always"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_app"
            android:icon="@drawable/ic_about"
            android:title="@string/about_app"
            app:showAsAction="always"/>
    </group>
</menu>
