<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#4F76F3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:background="@drawable/rounded_corner_background_white"
            android:backgroundTint="#FFFFFF"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="10sp"
                android:text="@string/food_name"
                android:textColor="#880E4F"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etFoodName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_food_name"
                android:inputType="textPersonName"
                android:maxLength="20" />

            <TextView
                android:layout_width="363dp"
                android:layout_height="33dp"
                android:layout_marginTop="10sp"
                android:text="@string/quantity_description"
                android:textColor="#880E4F"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etAmtFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_describe_quantity"
                android:inputType="text"
                android:maxLength="15" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginTop="10sp"
                android:text="@string/description"
                android:textColor="#880E4F"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:maxLength="500"
                android:maxLines="3"
                android:minLines="1" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginTop="10sp"
                android:text="@string/contact_number"
                android:textColor="#880E4F"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etContactno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:maxLength="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginTop="10sp"
                android:text="@string/address"
                android:textColor="#880E4F"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:maxLines="2"
                android:minLines="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="50sp"
                android:layout_marginBottom="20sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btdntfoodsbmt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_weight="3"
                    android:backgroundTint="#0288D1"
                    android:text="@string/submit"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="20sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btdntfoodreset"
                    android:layout_width="143dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="110sp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FF0000"
                    android:text="@string/reset"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>