<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:background="#1A237E">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1A237E"
        tools:context=".MainActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_background_white"
            android:backgroundTint="#FFFFFF"
            android:padding="20sp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498">

            <Button
                android:id="@+id/btLogin"
                android:layout_width="170dp"
                android:layout_height="49dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#0F79D6"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorLink="#0D47A1"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

            <EditText
                android:id="@+id/etLoginPhone"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:cursorVisible="true"
                android:ems="10"
                android:inputType="phone"
                android:gravity="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />


            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_marginTop="6dp"
                android:ems="10"
                android:inputType="textPassword"
                android:isScrollContainer="true"
                android:padding="6dp"
                android:shadowColor="#000000"
                android:textColor="#121212"
                android:textColorLink="#00000000"
                android:textSize="20sp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:fontFamily="@font/alegreya"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#132BBA"
                android:textSize="38dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/password"
                android:textColor="#880E4F"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLoginPhone" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/phone"

                android:textColor="#880E4F"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/tvRegisterLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:linksClickable="true"
                android:text="@string/dont_have_account"
                android:textColor="#FF0000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btLogin" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>